make mathematica interface more verbose

--- a/mma/interface/Makefile
+++ b/mma/interface/Makefile
@@ -17,7 +17,7 @@ clean:
 	$(DELETE) $(OBJ)
 	$(DELETE) MathLink.cpp
 
-$(OUT):	$(OBJ) 
+$(OUT):	$(OBJ) ../../libiint/libiint.a
 	$(CXX) $(OBJ) -o $(OUT) $(LDFLAGS) 
 
 %.o:	%.cpp
